[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/Tablet/TABLET placeholder.png" type="Texture" id=1]
[ext_resource path="res://scr/Menus/Tablet.gd" type="Script" id=2]
[ext_resource path="res://resources/fontes/Courier Prime Bold Textois.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/Tablet/post-it.png" type="Texture" id=4]
[ext_resource path="res://resources/Tablet/line.png" type="Texture" id=5]
[ext_resource path="res://resources/MainMenu/hover-return.png" type="Texture" id=6]
[ext_resource path="res://resources/MainMenu/neutral-return.png" type="Texture" id=7]
[ext_resource path="res://resources/MainMenu/click-return.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 34, 34 )

[sub_resource type="Animation" id=1]
resource_name = "Nova Animação"
tracks/0/type = "value"
tracks/0/path = NodePath("Fadein/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fadein/Fade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fadein/Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.188235, 0.0588235, 0.0588235, 0 ) ]
}

[node name="Tablet" type="Node"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 961, 540 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Postits" type="Node" parent="Sprite"]

[node name="post1" type="Node" parent="Sprite/Postits"]

[node name="Sprite" type="Sprite" parent="Sprite/Postits/post1"]
visible = false
position = Vector2( 476, 308 )
texture = ExtResource( 4 )

[node name="text" type="Label" parent="Sprite/Postits/post1"]
visible = false
margin_left = 390.0
margin_top = 237.0
margin_right = 562.0
margin_bottom = 418.0
custom_colors/font_color = Color( 0.0980392, 0.0941176, 0.054902, 1 )
custom_fonts/font = ExtResource( 3 )
autowrap = true

[node name="post2" type="Node" parent="Sprite/Postits"]

[node name="Sprite" type="Sprite" parent="Sprite/Postits/post2"]
visible = false
position = Vector2( 604, 668 )
texture = ExtResource( 4 )

[node name="Line" type="Sprite" parent="Sprite/Postits/post2"]
visible = false
position = Vector2( 526.2, 492.219 )
rotation = 0.933413
scale = Vector2( 0.45, 1 )
texture = ExtResource( 5 )

[node name="text" type="Label" parent="Sprite/Postits/post2"]
visible = false
margin_left = 513.0
margin_top = 600.0
margin_right = 696.0
margin_bottom = 763.0
custom_colors/font_color = Color( 0.0980392, 0.0941176, 0.054902, 1 )
custom_fonts/font = ExtResource( 3 )
autowrap = true

[node name="post3" type="Node" parent="Sprite/Postits"]

[node name="Sprite" type="Sprite" parent="Sprite/Postits/post3"]
visible = false
position = Vector2( 874.5, 383 )
texture = ExtResource( 4 )

[node name="Line" type="Sprite" parent="Sprite/Postits/post3"]
visible = false
position = Vector2( 738, 524 )
rotation = 2.29626
scale = Vector2( 0.3, 1 )
texture = ExtResource( 5 )

[node name="text" type="Label" parent="Sprite/Postits/post3"]
visible = false
margin_left = 783.0
margin_top = 307.0
margin_right = 965.0
margin_bottom = 470.0
custom_colors/font_color = Color( 0.0980392, 0.0941176, 0.054902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "."
autowrap = true

[node name="post4" type="Node" parent="Sprite/Postits"]

[node name="Sprite" type="Sprite" parent="Sprite/Postits/post4"]
visible = false
position = Vector2( 1057, 695 )
texture = ExtResource( 4 )

[node name="Line" type="Sprite" parent="Sprite/Postits/post4"]
visible = false
position = Vector2( 973, 537 )
rotation = 1.09542
scale = Vector2( 0.3, 1 )
texture = ExtResource( 5 )

[node name="text" type="Label" parent="Sprite/Postits/post4"]
visible = false
margin_left = 964.0
margin_top = 615.0
margin_right = 1154.0
margin_bottom = 778.0
custom_colors/font_color = Color( 0.0980392, 0.0941176, 0.054902, 1 )
custom_fonts/font = ExtResource( 3 )
autowrap = true

[node name="post5" type="Node" parent="Sprite/Postits"]

[node name="Sprite" type="Sprite" parent="Sprite/Postits/post5"]
visible = false
position = Vector2( 1221, 297 )
texture = ExtResource( 4 )

[node name="Line" type="Sprite" parent="Sprite/Postits/post5"]
visible = false
position = Vector2( 1128.5, 501.683 )
rotation = 1.99818
scale = Vector2( 0.5118, 1 )
texture = ExtResource( 5 )

[node name="text" type="Label" parent="Sprite/Postits/post5"]
visible = false
margin_left = 1128.0
margin_top = 219.0
margin_right = 1318.0
margin_bottom = 382.0
custom_colors/font_color = Color( 0.0980392, 0.0941176, 0.054902, 1 )
custom_fonts/font = ExtResource( 3 )
autowrap = true

[node name="post6" type="Node" parent="Sprite/Postits"]

[node name="Sprite" type="Sprite" parent="Sprite/Postits/post6"]
visible = false
position = Vector2( 1445, 601 )
texture = ExtResource( 4 )

[node name="Line" type="Sprite" parent="Sprite/Postits/post6"]
visible = false
position = Vector2( 1349, 450 )
rotation = 0.976809
scale = Vector2( 0.363089, 1.05523 )
texture = ExtResource( 5 )

[node name="text" type="Label" parent="Sprite/Postits/post6"]
visible = false
margin_left = 1350.0
margin_top = 526.0
margin_right = 1540.0
margin_bottom = 689.0
custom_colors/font_color = Color( 0.0980392, 0.0941176, 0.054902, 1 )
custom_fonts/font = ExtResource( 3 )
autowrap = true

[node name="botao_voltar" type="Area2D" parent="."]
position = Vector2( 25, -25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="botao_voltar"]
position = Vector2( 96, 991 )
frames = SubResource( 3 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="botao_voltar"]
position = Vector2( 96, 991 )
shape = SubResource( 4 )

[node name="Fadein" type="AnimationPlayer" parent="."]
autoplay = "Nova Animação"
"anims/Nova Animação" = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Fade" type="ColorRect" parent="Fadein"]
margin_left = 8.0
margin_top = -28.0
margin_right = 1922.0
margin_bottom = 1075.0
color = Color( 0.188235, 0.0588235, 0.0588235, 0 )

[connection signal="input_event" from="botao_voltar" to="." method="_on_botao_voltar_input_event"]
[connection signal="mouse_entered" from="botao_voltar" to="." method="_on_botao_voltar_mouse_entered"]
[connection signal="mouse_exited" from="botao_voltar" to="." method="_on_botao_voltar_mouse_exited"]
